[package]
name = "pomotodo"
version = "0.2.0"
authors = ["KAMx <kevin.xjy@gmail.com>"]
description = "Pomotodo SDK for Rust Programming Language."

[dependencies]
serde = "1.0"
reqwest = "0.8"
serde_json = "1.0"
error-chain = "0.11"
serde_derive = "1.0"
clippy = { version = "*", optional = true }
uuid = { version = "0.5", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[[test]]
name = "test"
path = "tests/mod.rs"
